tests/baselines/reference/typeParameterDiamond3.errors.txt
typeParameterDiamond3.ts(8,13): error TS2322: Type 'T | U' is not assignable to type 'Top'.
  'Top' could be instantiated with an arbitrary type which could be unrelated to 'T | U'.
typeParameterDiamond3.ts(8,19): error TS2454: Variable 'middle' is used before being assigned.
typeParameterDiamond3.ts(9,13): error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
  Type 'Top | T | U' is not assignable to type 'T | U'.
    Type 'Top' is not assignable to type 'T | U'.
typeParameterDiamond3.ts(9,22): error TS2454: Variable 'bottom' is used before being assigned.
typeParameterDiamond3.ts(10,13): error TS2322: Type 'Bottom' is not assignable to type 'Top'.
  'Top' could be instantiated with an arbitrary type which could be unrelated to 'Bottom'.
typeParameterDiamond3.ts(10,19): error TS2454: Variable 'bottom' is used before being assigned.


==== typeParameterDiamond3.ts (6 errors) ====
    function diamondTop<Top>() {
        function diamondMiddle<T, U>() {
            function diamondBottom<Bottom extends Top | T | U>() {
                var top: Top;
                var middle: T | U;
                var bottom: Bottom;
    
                top = middle;
                ~~~
!!! error TS2322: Type 'T | U' is not assignable to type 'Top'.
!!! error TS2322:   'Top' could be instantiated with an arbitrary type which could be unrelated to 'T | U'.
!!! related TS2208 typeParameterDiamond3.ts:2:28: This type parameter might need an `extends Top` constraint.
                      ~~~~~~
!!! error TS2454: Variable 'middle' is used before being assigned.
                middle = bottom;
                ~~~~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'T | U'.
!!! error TS2322:   Type 'Top | T | U' is not assignable to type 'T | U'.
!!! error TS2322:     Type 'Top' is not assignable to type 'T | U'.
!!! related TS2208 typeParameterDiamond3.ts:1:21: This type parameter might need an `extends T | U` constraint.
                         ~~~~~~
!!! error TS2454: Variable 'bottom' is used before being assigned.
                top = bottom;
                ~~~
!!! error TS2322: Type 'Bottom' is not assignable to type 'Top'.
!!! error TS2322:   'Top' could be instantiated with an arbitrary type which could be unrelated to 'Bottom'.
                      ~~~~~~
!!! error TS2454: Variable 'bottom' is used before being assigned.
            }
        }
    }